# wuneed

./: README.md  docker-compose.yml  pyproject.toml
ide_plugins/pycharm/: plugin.xml
ide_plugins/vscode/: package.json
src/wuneed/: main.py
src/wuneed/ai/: context_recommender.py  continuous_learning.py  copilot.py
src/wuneed/ai/rag/: plugin_manager.py  retriever.py
src/wuneed/ai/rag/extensions/: extension_manager.py  query_expansion.py
src/wuneed/ci_cd/: integrator.py
src/wuneed/cli/: main.py
src/wuneed/cli/commands/: alias.py  assist.py  community_extensions.py  config.py  docs.py  extension_ci_cd.py  metrics.py  plugin.py  snippet.py  template.py  transcribe.py  update.py  visualize.py  workflow.py
src/wuneed/cli/plugins/: git_helper.py
src/wuneed/config/: manager.py  user_config.py
src/wuneed/hooks/: logging_hook.py
src/wuneed/integrations/: transcription.py
src/wuneed/plugins/: manager.py
src/wuneed/plugins/examples/: hello_world.py
src/wuneed/security/: compliance.py
src/wuneed/telemetry/: collector.py
src/wuneed/ui/: tui.py
src/wuneed/utils/: advanced_cache.py  alias_manager.py  auto_doc.py  cache.py  cli_plugin_manager.py  command_history.py  community_extension_manager.py  data_visualizer.py  extension_ci_cd.py  hook_manager.py  language.py  logger.py  metrics_manager.py  notification_manager.py  snippet_manager.py  template_manager.py  updater.py  version_control.py  workflow_manager.py
src/wuneed/workflows/: builder.py  manager.py
tests/: test_copilot.py  test_workflow_builder.py
(+2 files in other folders)
